--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
-
 body{
-    width: 100%;
-    height: 100%;
+    display: flex;
+    flex-direction: column;
+    font-family: Arial, Helvetica, sans-serif;
 }
 
 .header{
@@ -30,4 +30,43 @@ ul.head-link li{
 
 ul.head-link li a{
     text-decoration: none;
+}
+
+.main{
+    display: flex;
+    align-items: flex-start;
+    justify-content: space-evenly;
+    padding: 40px 0;
+    background-color: #1f2937;
+    margin: 0 -10px -10px -10px;
+}
+
+.main-info{
+    flex-basis: 400px;
+}
+
+.img{
+    background-color: #eef;
+    padding: 80px;
+    margin-top: 3s0px;
+}
+
+div.main-info h1{
+    font-size: 48px;
+    font-weight: 1000;
+    color: #f9faf8;
+    margin-bottom: 0;
+}
+
+div.main-info div{
+    color: #f9faf8;
+}
+
+div.main-info button{
+    background-color: #3882f6;
+    border: none;
+    border-radius: 5px;
+    color: #f9faf8;
+    padding: 4px 18px;
+    margin-top: 8px;
 }
