--- a/style.css
+++ b/style.css
@@ -46,7 +46,7 @@ ul.head-link li a{
 }
 
 .img{
-    background-color: #eef;
+    background-color: #e5e7eb;
     padding: 80px;
     margin-top: 3s0px;
 }
@@ -75,6 +75,7 @@ div.main-info button{
     display: flex;
     flex-direction: column;
     align-items: center;
+    margin-bottom: 50px;
 }
 
 .third-sec h2{
@@ -102,5 +103,19 @@ div.main-info button{
 .r-img p{
     font-size: 10px;
     text-align: center;
+}
+
+.fourth-sec{
+    background-color: #e5e7eb;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin: 50px -10px;
+    padding: 30px;
+}
+
+.fourth-sec p{
+    width: 600px;
+    font-size: 18px;
 }
 
